# A2A

./: pyproject.toml  requirements.txt
Agno_mcp_Agent/: __main__.py  agent_executor.py  mcp_agent.py
Agno_mcp_Agent/Agno_session/: agno_agent_storage.db
Host_Agent/: Host_Agent.py  __main__.py  remote_agent_connection.py
WebSearchAgent/: WebSearchAgent.py  __main__.py  agent_executor.py
langchain_host_Agent/: Host_Agent.py  __main__.py  remote_agent_connection.py  serverConfigs.json
mcp_server/: __main__.py
mcp_server/csvs/: movies.csv
simple_client/: __main__.py
simple_streaming_client/: __main__.py
