[project]
name = "a2a-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "a2a-sdk==0.3.22",
    "agno>=2.6.19",
    "aioboto3>=7.0.0",
    "aiofiles>=25.1.0",
    "fastmcp>=3.4.2",
    "google-adk>=2.3.0",
    "google-search-results>=2.4.2",
    "gradio>=6.19.0",
    "langchain>=1.3.11",
    "langchain-aws>=1.6.0",
    "langchain-classic>=1.0.8",
    "langchain-cohere>=0.6.0",
    "langchain-community>=0.4.2",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-ollama>=1.1.0",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.6",
    "langgraph-prebuilt>=1.1.0",
    "litellm>=1.89.3",
    "mcp>=1.28.0",
    "openai>=2.43.0",
    "pandas>=3.0.3",
    "pip-system-certs>=5.3",
    "rich>=15.0.0",
]
